--- a/.travis.yml
+++ b/.travis.yml
@@ -5,11 +5,11 @@ rvm:
 
 install: 
   - gem install jekyll 
- # - gem install html-proofer -v 2.6.1
+  - gem install html-proofer -v 2.6.1
 
 script:
 - bundle install
-- bundle exec jekyll build #&& htmlproofer ./_site
+- bundle exec jekyll build && htmlproofer ./_site
 after_success:
 - git clone https://$GITHUB_REPO
 - cd $(basename ${GITHUB_REPO%.git})
