Fix footer layout

--- a/_config.yml
+++ b/_config.yml
@@ -35,3 +35,18 @@ exclude:
 sass:
     sass_dir: _sass
 
+# Reading Files
+include:
+   - _pages
+   
+permalink: /:categories/:title/
+
+
+defaults:
+  # _pages
+  - scope:
+      path: ""
+      type: pages
+    values:
+      layout: single
+      author_profile: true
