--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,8 @@ node_js:
  - '7.4'
 before_install:
   - if [[ `npm -v` != 3* ]]; then npm i -g npm@3; fi
-  - sudo apt-get install curl
   - npm cache clear
+  - \curl -sSL https://get.rvm.io | bash -s stable --ruby
   - rvm install 2.1
   - rvm use 2.1
   - . $HOME/.nvm/nvm.sh && nvm install 6.1 && nvm use 6.1
