--- a/.travis.yml
+++ b/.travis.yml
@@ -8,9 +8,10 @@ node_js:
 before_install:
   - if [[ `npm -v` != 3* ]]; then npm i -g npm@3; fi
   - npm cache clear
+  - gpg --keyserver hkp://keys.gnupg.net --recv-keys 409B6B1796C275462A1703113804BB82D39DC0E3
   - \curl -sSL https://get.rvm.io | bash -s stable --ruby
-  - rvm install 2.1
-  - rvm use 2.1
+  - rvm install 2.4
+  - rvm use 2.4
   - . $HOME/.nvm/nvm.sh && nvm install 6.1 && nvm use 6.1
   - gem install bundler
   - bundle check || bundle install
