reload rvm before

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ before_install:
   - npm cache clear
   - gpg --keyserver hkp://keys.gnupg.net --recv-keys 409B6B1796C275462A1703113804BB82D39DC0E3
   - \curl -sSL https://get.rvm.io | bash -s stable --ruby
+  - rvm reload
   - rvm get head --auto-dotfiles
   - rvm install 2.4
   - rvm use 2.4
