--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gulp-header": "^1.8.7",
     "gulp-less": "^3.1.0",
     "gulp-rename": "^1.2.2",
+    "gulp-run": "^1.7.1",
     "gulp-sass": "^3.1.0",
     "gulp-uglify": "^2.1.2",
     "jquery": "^3.1.1",
