--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,6 @@
 language: ruby
 rvm:
-- 2.0.0
-- 1.9.3
+- 2.4.0
 - jruby-19mode
 - rbx-2
 
@@ -12,4 +11,4 @@ install:
 
 script:
 - bundle install
-- bundle exec jekyll buildl
+- bundle exec jekyll build
