--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,8 @@ after_success:
 - touch .nojekyll
 - git add -A .
 - git commit -m "Generated Jekyll site by Travis CI - ${TRAVIS_BUILD_NUMBER}"
-- git push --force "https://${DEPLOY_KEY}@${GITHUB_REPO}" HEAD:${REPO_TARGET_BRANCH}
+- git push --force "https://user:${GH_TOKEN}@${GITHUB_REPO}" HEAD:${REPO_TARGET_BRANCH}
+
 env:
   global:
   - NOKOGIRI_USE_SYSTEM_LIBRARIES=true
