--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
-  {
+{
   "name": "vcaldas.github.io",
   "title": "vcaldasWebsite",
   "version": "0.0.1",
@@ -20,6 +20,7 @@
     "gulp-cssnano": "^2.1.2",
     "gulp-if": "^2.0.2",
     "gulp-imagemin": "^3.3.0",
+    "gulp-purifycss": "^0.2.0",
     "gulp-rsync": "0.0.8",
     "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^2.6.0",
