--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ rvm:
 
 install:
   - bundle install
+  - npm install
 # set execution permission on our build script
 before_script:
  - chmod +x ./script/cibuild
