--- a/.travis.yml
+++ b/.travis.yml
@@ -5,13 +5,15 @@ branches:
   - master
 rvm:
 - 2.4.0
-
+before_install:
+  - rvm install 2.4.0
 install:
   - bundle install
+  
 # set execution permission on our build script
 before_script:
  - chmod +x ./script/cibuild
- - gulp build-clean --production 
+ - gulp build-clean --production
 # path to our build script.
 # Travis will run `bundle install` by default before running our script
 script: ./script/cibuild
