--- a/.travis.yml
+++ b/.travis.yml
@@ -5,11 +5,12 @@ branches:
   - source
 rvm:
 - 2.4.0
+
 install:
   - bundle install
   - npm install
-  # - gulp build-clean --production
-set execution permission on our build script
+
+# set execution permission on our build script
 before_script:
 # - chmod +x ./script/cibuild
 - gulp build-clean --production
