--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,11 @@ language: ruby
 branches:
   only:
   - source
+
+cache:
+  directories:
+    - "node_modules"
+    
 rvm:
 - 2.4.0
 
@@ -13,10 +18,12 @@ install:
 # set execution permission on our build script
 before_script:
 # - chmod +x ./script/cibuild
-- gulp build-clean --production
+- npm install -g gulp-cli
+# - gulp build-clean --production
 # path to our build script.
 # Travis will run `bundle install` by default before running our script
 #script: ./script/cibuild
+script: gulp
 exclude: [vendor]
 sudo: false
 after_success:
