--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,7 @@ install:
 before_script:
 # - chmod +x ./script/cibuild
 - npm install -g gulp-cli
+- npm install
 # - gulp build-clean --production
 # path to our build script.
 # Travis will run `bundle install` by default before running our script
