--- a/.travis.yml
+++ b/.travis.yml
@@ -5,13 +5,13 @@ branches:
   - source
 
 node_js:
-  - '7'
+  - "7"
 
 before_install:
   - rvm install 2.4.0
 
 before_script:
-  - npm install -g gulp
+  - npm install --global gulp-cli
   - npm install
   - gem install bundler
   - bundle install
