--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ before_install:
   - rvm install 2.4.0
 
 before_script:
-  - npm install --global gulp-cli
+  - npm i -g gulp-cli
   - npm install
   - gem install bundler
   - bundle install
