--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "vcaldas.github.io",
   "title": "vcaldasWebsite",
   "version": "0.0.1",
-  "homepage": "http://victorcaldas.com",
+  "homepage": "http://vcaldas.github.io",
   "author": "Victor Caldas",
   "private": true,
   "license": {
@@ -14,7 +14,7 @@
     "cross-spawn": "^5.1.0",
     "del": "^3.0.0",
     "fs": "0.0.1-security",
-    "gulp": "github:gulpjs/gulp#4.0",
+    "gulp": "github:gulpjs/gulp",
     "gulp-autoprefixer": "^4.0.0",
     "gulp-concat": "^2.6.1",
     "gulp-cssnano": "^2.1.2",
