--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ before_script:
 - npm i -g gulp-cli
 - npm install
 - gem install bundler
+- bundle update --bundler
 - bundle install
 script:
 - gulp build-clean  --production
