--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,11 +1,27 @@
 repos:
--   repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v2.3.0
+  - repo: https://github.com/pre-commit/pre-commit-hooks
+    rev: v2.4.0
     hooks:
-    -   id: check-yaml
-    -   id: end-of-file-fixer
-    -   id: trailing-whitespace
--   repo: https://github.com/psf/black
-    rev: 19.3b0
+      - id: flake8
+        additional_dependencies: [flake8-bandit]
+        stages: [push]
+  - repo: https://github.com/pre-commit/mirrors-mypy
+    rev: v0.740
     hooks:
-    -   id: black
+      - id: mypy
+        stages: [push]
+
+  - repo: https://github.com/pycqa/isort
+    rev: 5.10.1
+    hooks:
+      - id: isort
+        stages: [push]
+        args: [--check-only, "--profile", "black"]
+  - repo: https://github.com/psf/black
+    rev: 21.10b0
+    hooks:
+      - id: black
+        language_version: python3.8
+        stages: [push]
+        args: [--check]
+
