--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,24 +4,24 @@ repos:
     hooks:
       - id: flake8
         additional_dependencies: [flake8-bandit]
-        stages: [push]
+        stages: [commit]
   - repo: https://github.com/pre-commit/mirrors-mypy
     rev: v0.740
     hooks:
       - id: mypy
-        stages: [push]
+        stages: [commit]
 
   - repo: https://github.com/pycqa/isort
     rev: 5.10.1
     hooks:
       - id: isort
-        stages: [push]
+        stages: [commit]
         args: [--check-only, "--profile", "black"]
   - repo: https://github.com/psf/black
     rev: 21.10b0
     hooks:
       - id: black
-        language_version: python3.8
-        stages: [push]
+        language_version: python3.9
+        stages: [commit]
         args: [--check]
 
