--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,11 +5,12 @@ repos:
       - id: flake8
         additional_dependencies: [flake8-bandit]
         stages: [commit]
-  - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v0.740
-    hooks:
-      - id: mypy
-        stages: [commit]
+  # - repo: https://github.com/pre-commit/mirrors-mypy
+  #   rev: v0.800
+  #   hooks:
+  #     - id: mypy
+  #       stages: [commit]
+  #       args: [--no-strict-optional, --ignore-missing-imports]
 
   - repo: https://github.com/pycqa/isort
     rev: 5.10.1
